make submodules follow master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "MS3000-Assets"]
 	path = MS3000-Assets
 	url = https://github.com/magicshifter/MS3000-Assets.git
+	branch = master
 [submodule "MS3000-Firmware"]
 	path = MS3000-Firmware
 	url = https://github.com/magicshifter/MS3000-Firmware.git
+	branch = master
 [submodule "MS3000-WebInterface"]
 	path = MS3000-WebInterface
 	url = https://github.com/magicshifter/MS3000-WebInterface.git
+	branch = master
