Linked Scematic as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = MS3000-WebInterface
 	url = https://github.com/magicshifter/MS3000-WebInterface.git
 	branch = master
+[submodule "MS3000-Schematic"]
+	path = MS3000-Schematic
+	url = git@github.com:magicshifter/MS3000-Schematic.git
